-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 211204) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in 
                       preparation of major releases (optional)

-----------------------------------------------------------------------

xx022005 (v2.3.6)  -** stable release **-
	- edi-entries: edi-40 progress
	- added: support for having commas in arguments by escaping 
	 	 them with a backslash (example: "ai-add foo\,bar.wav")
	- added: pretty-printing of ecasound output; wrap output so
		 so that all lines fit into 74 columns; does not affect
		 wellformed output mode nor stderr output (-D)
	- added: new section about handling commas in filenames to 
		 Ecasound User's Guide
	- added: eiam - new 'int-log-history' command to query 
	 	 recent log messages sent by libecasound; this is a very
		 useful tool for debugging ECI scripts and apps
	- added: eiam - new 'int-set-log-history-length' command to set
		 log history length; default to 5 items
	- added: resample-lq (low-quality) audio object to force using
		 the internal resampler even though support 
		 libsamplerate is enabled at build time
	- changed: more helpful messages to explain why a chainsetup 
		   cannot be connected to the engine
	- changed: EIAM - when returning a list of strings, all commas
		   in list elements are now escaped with backslashes; 
		   this is done to avoid ambiguity in parsing
	- changed: new default debug level of 271
	- changed: new optimized message queue implementation used in
	           communication between the engine and the interface 